# easyRDMA-GPUDirect

./: CMakeLists.txt  README.md  gpu_to_host_client  gpu_to_host_client.cpp  gpu_to_host_server  gpu_to_host_server.cpp  gpudirect_client  gpudirect_client.cpp  gpudirect_client_externalhost  gpudirect_client_externalhost.cpp  gpudirect_client_robust  gpudirect_client_robust.cpp  gpudirect_rdma_host_gpu  gpudirect_rdma_host_gpu.cpp  gpudirect_server  gpudirect_server.cpp  gpudirect_server_safe  gpudirect_server_safe.cpp  gpudirectclient  rdma_client  rdma_client.cpp  rdma_server  rdma_server.cpp  simple_client  simple_client.cpp  simple_server  simple_server.cpp  test_system_memory  test_system_memory.cpp
core/: CMakeLists.txt
core/api/: easyrdma.h  rdma_api_c.cpp
core/linux/: RdmaCommon.cpp  RdmaCommon.h  RdmaConnectedSession.cpp  RdmaConnectedSession.h  RdmaListener.cpp  RdmaMemoryRegion.h
examples/: CMakeLists.txt  easyRDMA_simple_client.cpp  easyRDMA_simple_server.cpp  externalhost_to_gpu_client.cpp  externalhost_to_gpu_server.cpp  gpu_to_host_client.cpp  gpu_to_host_server.cpp  host_to_gpu_client.cpp  host_to_gpu_server.cpp
